Prevent going into landscape mode from changing the font size. Do word wrapping better.

--- a/src/chop/styles.css
+++ b/src/chop/styles.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 
